# MicBot

./: .gitignore  CMakeLists.txt  FakeMic.as  MicBot.as  README.md  client.py  client2.py  server.py  vps_howto.txt
lib/: libcurl-x64.exp  libcurl-x64.lib  webm_parser.lib
src/: PipeInputBuffer.cpp  PipeInputBuffer.h  SteamVoiceEncoder.cpp  ThreadInputBuffer.cpp  ThreadInputBuffer.h  crc32.h  main.cpp  mp4_util.cpp  opus_util.cpp  opus_util.h  pipes.h  pipes_linux.cpp  pipes_win.cpp  stream_mp3.cpp  stream_mp3.h  util.cpp  util.h  webm.cpp  webm_util.cpp  webm_util.h
testing/: FakeMic.as  replay.as  wireshark.py
